--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 					<span class="major"><img width="300px" src="https://eidos-public-1253877464.cos.ap-beijing.myqcloud.com/xiaoyi-website/IMG_3846.png"> </span>
 					<h1>你好，我是<strong>孙潇逸</strong></h1>
 					<p>毕业于山东艺术学院广播编导专业</p>
+					<p><a herf="cv.pdf"> 简历 </a> </p>
 					<ul class="actions special">
-						<li><a href="#one" class="button scrolly">我的作品集</a></li>
+						<li><a href="#first" class="button scrolly">我的作品集</a></li>
 					</ul>
 				</div>
 			</section>
