--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<span class="major"><img width="300px" src="https://eidos-public-1253877464.cos.ap-beijing.myqcloud.com/xiaoyi-website/IMG_3846.png"> </span>
 					<h1>你好，我是<strong>孙潇逸</strong></h1>
 					<p>毕业于山东艺术学院广播编导专业</p>
-					<p><a herf="cv.pdf"> 简历 </a> </p>
+					<p><a href="cv.pdf"> 简历 </a> | <a href="#contact"> 联系方式</a> </p>
 					<ul class="actions special">
 						<li><a href="#first" class="button scrolly">我的作品集</a></li>
 					</ul>
